test/sparse/deitz/test_sparse1.good
test_sparse1.chpl:5: error: halt reached - Sparse arrays cannot currently be written
