test/sparse/deitz/test_sparse1.chpl
var d : domain(2) = {1..10, 1..10};
var s : sparse subdomain(d);
var a : [s] real;

writeln(a);
